tests/type_check/build/decl_namespace_violations.err.expected
error: at 23:8: [TC-DuplicateDeclaration] Duplicate declaration of type 'P'
    |
 22 | struct P { x: i64 }
 23 | struct P { y: i64 }
    |        ^
 24 | 
    |
error: at 27:6: [TC-DuplicateDeclaration] Duplicate declaration of type 'E'
    |
 26 | enum E { A: i64 }
 27 | enum E { B: i64 }
    |      ^
 28 | 
    |
error: at 32:4: [TC-DuplicateDeclaration] Duplicate declaration of function 'f'
    |
 31 | fn f() { entry: return }
 32 | fn f() { entry: return }
    |    ^
 33 | 
    |
error: at 37:6: [TC-DuplicateDeclaration] Duplicate declaration of type 'N'
    |
 36 | struct N { x: i64 }
 37 | enum N { A: i64 }
    |      ^
 38 | 
    |
error: at 43:3: [TC-DuplicateStructField] In struct 'S', field 'x' is declared more than once
    |
 42 |   x: i64
 43 |   x: bool
    |   ^^^^^^^
 44 | }
    |
error: at 50:3: [TC-DuplicateEnumVariant] In enum 'V', variant 'A' is declared more than once
    |
 49 |   A: unit
 50 |   A: i64
    |   ^^^^^^
 51 | }
    |
